turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:22: error: not found: value etCouleurBrosse
etCouleurBrosse(c:Color) getCouleurBrosse():Color
^LangtonsAnt:23: error: not found: value Interagir
Interagir avec le monde
^