turmites.lessons.turmites.langton.Langton.scala.code

def step() {
if (getCouleurSol()==Color.black){
	setCouleurBrosse(Color.white);
	baisseBrosse();
	leveBrosse();
	
	gauche();
	avance();
}
else if (getCouleurBrosse()==Color.white){
	setCouleurBrosse(Color.black);
	baisseBrosse();
	leveBrosse();
	
	gauche();
	avance();


	
}
}
etCouleurBrosse(c:Color) getCouleurBrosse():Color
Interagir avec le monde
Obtenir la couleur du sol
getCouleurSol():Color